// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColumnResizing snapshots > should render ColumnResizing{max} 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 32px);"
    >
      <small
        class="SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Max width
      </small>
      <small
        class="SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Max height
      </small>
    </div>
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--two-inputs"
        style="width: calc(100% - 32px);"
      >
        <div
          class="TextField"
          data-test-text-field="max-width"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="max-width"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="max-width"
            >
              <div
                class="Icon Icon--neutral-2"
                data-test-icon="max-width"
                height="12"
                name="MaxWidth"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="max-width"
              maxlength="6"
              type="text"
              value="200"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="max-width"
                    height="12"
                    name="MaxWidth"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Set to current width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-width"
                    height="12"
                    name="AutoWidth"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto max width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="close"
                    height="12"
                    name="Close"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Remove max width
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="TextField"
          data-test-text-field="max-height"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="max-height"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="max-height"
            >
              <div
                class="Icon Icon--neutral-2"
                data-test-icon="max-height"
                height="12"
                name="MaxHeight"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="max-height"
              maxlength="6"
              type="text"
              value="200"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="max-height"
                    height="12"
                    name="MaxHeight"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Set to current height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-height"
                    height="12"
                    name="AutoHeight"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto max height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="close"
                    height="12"
                    name="Close"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Remove max height
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnResizing snapshots > should render ColumnResizing{min} 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 32px);"
    >
      <small
        class="SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Min width
      </small>
      <small
        class="SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Min height
      </small>
    </div>
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--two-inputs"
        style="width: calc(100% - 32px);"
      >
        <div
          class="TextField"
          data-test-text-field="min-width"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="min-width"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="min-width"
            >
              <div
                class="Icon Icon--neutral-2"
                data-test-icon="min-width"
                height="12"
                name="MinWidth"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="min-width"
              maxlength="6"
              type="text"
              value="200"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="min-width"
                    height="12"
                    name="MinWidth"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Set to current width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-width"
                    height="12"
                    name="AutoWidth"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto min width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="close"
                    height="12"
                    name="Close"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Remove min width
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="TextField"
          data-test-text-field="min-height"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="min-height"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="min-height"
            >
              <div
                class="Icon Icon--neutral-2"
                data-test-icon="min-height"
                height="12"
                name="MinHeight"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="min-height"
              maxlength="6"
              type="text"
              value="200"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="min-height"
                    height="12"
                    name="MinHeight"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Set to current height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-height"
                    height="12"
                    name="AutoHeight"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto min height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="close"
                    height="12"
                    name="Close"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Remove min height
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnResizing snapshots > should render when values are mixed{max} 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 32px);"
    >
      <small
        class="SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Max width
      </small>
      <small
        class="SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Max height
      </small>
    </div>
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--two-inputs"
        style="width: calc(100% - 32px);"
      >
        <div
          class="TextField"
          data-test-text-field="max-width"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="max-width"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="max-width"
            >
              <div
                class="Icon Icon--neutral-2"
                data-test-icon="max-width"
                height="12"
                name="MaxWidth"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="max-width"
              maxlength="6"
              type="text"
              value="200"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="max-width"
                    height="12"
                    name="MaxWidth"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Set to current width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-width"
                    height="12"
                    name="AutoWidth"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto max width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="close"
                    height="12"
                    name="Close"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Remove max width
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="TextField"
          data-test-text-field="max-height"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="max-height"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="max-height"
            >
              <div
                class="Icon Icon--neutral-2"
                data-test-icon="max-height"
                height="12"
                name="MaxHeight"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="max-height"
              maxlength="6"
              type="text"
              value="200"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="max-height"
                    height="12"
                    name="MaxHeight"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Set to current height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-height"
                    height="12"
                    name="AutoHeight"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto max height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="close"
                    height="12"
                    name="Close"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Remove max height
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnResizing snapshots > should render when values are mixed{min} 1`] = `
<DocumentFragment>
  <div
    class="SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="SectionColumnLabels"
      style="width: calc(100% - 32px);"
    >
      <small
        class="SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Min width
      </small>
      <small
        class="SectionColumnLabels__label Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Min height
      </small>
    </div>
    <div
      class="SectionColumn__row"
    >
      <div
        class="SectionColumnContent SectionColumnContent--two-inputs"
        style="width: calc(100% - 32px);"
      >
        <div
          class="TextField"
          data-test-text-field="min-width"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="min-width"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="min-width"
            >
              <div
                class="Icon Icon--neutral-2"
                data-test-icon="min-width"
                height="12"
                name="MinWidth"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="min-width"
              maxlength="6"
              type="text"
              value="200"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="min-width"
                    height="12"
                    name="MinWidth"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Set to current width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-width"
                    height="12"
                    name="AutoWidth"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto min width
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="close"
                    height="12"
                    name="Close"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Remove min width
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="TextField"
          data-test-text-field="min-height"
          data-test-tooltip=""
        >
          <div
            class="TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="min-height"
          >
            <div
              class="ScrubbableInput"
              data-test-scrubbable-input="min-height"
            >
              <div
                class="Icon Icon--neutral-2"
                data-test-icon="min-height"
                height="12"
                name="MinHeight"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="min-height"
              maxlength="6"
              type="text"
              value="200"
            />
            <div
              class="TextFieldPopover"
            >
              <div
                class="TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="Popover"
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="PopoverItem"
                  data-test-popover-item="0"
                >
                  <div
                    class="PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="min-height"
                    height="12"
                    name="MinHeight"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Set to current height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="1"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="auto-height"
                    height="12"
                    name="AutoHeight"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Auto min height
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="2"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
                <div
                  class="PopoverItem"
                  data-test-popover-item="3"
                >
                  <div
                    class="PopoverItem__check-icon Icon Icon--neutral-1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="PopoverItem__icon Icon Icon--neutral-1"
                    data-test-icon="close"
                    height="12"
                    name="Close"
                    width="12"
                  />
                  <small
                    class="PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Remove min height
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="SectionColumnButtonIcons"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
